--- a/challenges/05_test_drive_html/music_library_app_demo/views/index.erb
+++ b/challenges/05_test_drive_html/music_library_app_demo/views/index.erb
@@ -1,11 +1,11 @@
 <!-- file: views/index.erb -->
-
 <html>
   <head></head>
   <body>
-    <h1>Welcome to my page</h1>
-
-    <p>This is some web page</p>
-    <img src="welcome to my page.jpg" />
+    <h1><%= album.title %></h1>
+    <p>
+      Release year: <%= album.release_year %>
+      Artist: <%= album.artist.name %>
+    </p>
   </body>
 </html>
