--- a/challenges/05_test_drive_html/music_library_app_demo/views/new_album.erb
+++ b/challenges/05_test_drive_html/music_library_app_demo/views/new_album.erb
@@ -1,17 +1,17 @@
 <form method="POST" action="/albums">
     <div>
         <label>Album title</label>
-        <input type="text" name="album_title" />
+        <input type="text" name="title" />
     </div>
 
     <div>
         <label>Album release year</label>
-        <input type="text" name="album_release_year" />
+        <input type="text" name="release_year" />
     </div>
 
     <div>
         <label>Album artist ID</label>
-        <input type="text" name="album_artist_id" />
+        <input type="text" name="artist_id" />
     </div>
 
     <input type="submit" />
